# amherst-core

./: .gitignore  prek.toml  pyproject.toml
src/amherst_core/: commence_types.py  consts_enums.py
src/amherst_core/mdls/: _shipable.py  contact_address.py  customer.py  hire.py  sale.py  shipment.py
src/amherst_core/models/: __init__.py  _base.py  _meta.py  _shipable.py  contact_address.py  customer.py  hire.py  sale.py  shipment.py  shipment_details.py
src/amherst_core/utils/: get_set_convert.py  playground.py  text_and_date.py  type_manipulations.py
tests/: conftest.py  test_commence_shipment.py  test_models.py  test_pyc.py  test_pydantic_validators.py
