[project]
name = "amherst-core"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paw", email = "paw@pawrequest.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pycommence>=0.3.1",
    "pydantic>=2.12.5",
]

[project.scripts]
amherst-core = "amherst_core:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

#[tool.uv.sources]
#pycommence = { path = '../pycommence', editable = true }
#pycommence = { git = 'https://github.com/pawrequest/pycommence', branch = 'fapi' }
